@@ -1,18 +1,18 @@
 __doc__ = """List of samples to be used in the analysis"""
 
 ##
-## Baseline samples   built from 50ns tags [r6630, r6647, r6793, r6828]
+## Baseline samples   built from 50ns tags [r6630, r6647, r6655, r6767, r6793, r6802, r6828]
 ##
 lZjets   = range(361444,361467+1) # Sherpa Znunu 
-lZjets  += range(361372,361393+1) # Sherpa Zee
+lZjets  += range(361372,361395+1) # Sherpa Zee
 lZjets  += range(361396,361419+1) # Sherpa Zmumu
-lZjets  += range(361429,361438+1) # Sherpa Ztautau  missing pt<280 and pt> 1000 samples
+lZjets  += range(361420,361443+1) # Sherpa Ztautau
 
 lYjets   = range(361039,361061+1) # Sherpa
 
-lWjets   = range(361300,361318+1) # Sherpa Wenu missing pt<70 and pt>700
+lWjets   = range(361300,361323+1) # Sherpa Wenu missing pt<70
 lWjets  += range(361324,361347+1) # Sherpa Wmunu  missing pt<70 
-lWjets  += range(361357,361363+1) # Sherpa Wtaunu missing pt<280 and pt>700
+lWjets  += range(361348,361371+1) # Sherpa Wtaunu
 
 lttbar   = [410000] # PowhegPythiaEvtGen_P2012_ttbar_hdamp172p5_nonallhad
 lsinglet = [410011, 410012, # PowhegPythia t-channel
@@ -24,7 +24,8 @@ lTop     = lttbar + lsinglet + lttbarX
 
 # diboson samples
 lDiBoson =  range(361063,361072+1)  # Sherpa ZZ+WZ (leptons)
-lDiBoson += [361084,361085] # Sherpa WqqZll WqqZnunu
+lDiBoson += range(361083,361087+1) # Sherpa WqqZll WqqZnunu
+lDiBoson += [361081,36102] # Sherpa WqqWlnu
 lTriBoson = [361073]+range(361075,361076,361080+1)  # 
 
 
